--- a/CSS/general.css
+++ b/CSS/general.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 body
 {
     background-color: black;
@@ -17,4 +27,12 @@ a
     text-decoration: none;
     color: white;
 }
-
+/* 
+@media only screen and (min-width: 200px)
+{
+    img
+    {
+        margin: auto;
+    display: block;
+    }
+  } */
