--- a/CSS/general.css
+++ b/CSS/general.css
@@ -9,7 +9,7 @@ body
 {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-    background-color: black;
+    background-color:rgba(0, 4, 41, 1);
     color: white;
     font-family: 'Fredoka', sans-serif;
 }
@@ -51,6 +51,13 @@ img::-moz-selection
 	border-radius: 5px;
 }
 
+.text
+{
+    font-size: xx-large;
+    
+    text-align: justify;
+	text-justify: inter-word;
+}
 
 /* 
 @media only screen and (min-width: 200px)
